[package]
name = "UI_Clock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ambient_api = { version = "0.2.1" }

[[bin]]
name = "ambient_ui_clock_client"
path = "src/client.rs"
required-features = ["client"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]