[package]
name = "ambient_ui_clock"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = "0.2.1"

[[bin]]
name = "client_ambient_ui_clock"
path = "src/client.rs"
required-features = ["client"]

[[bin]]
name = "server_ambient_ui_clock"
path = "src/server.rs"
required-features = ["server"]

[[bin]]
name = "test_ambient_ui_clock"
path = "src/testlib.rs"

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]